style.scss
/* ... */
.widget {
  margin-top: 10px;
  padding: 6px 10px 14px 10px;
  background-color: rgba(40,38,38,0.74);
}

/* !Sidebar End*/

/* !Footer */

.back-to-top {
  float: right;
  margin: 50px 20px 0px 0px;
}

.back-to-top:hover {
  border-bottom: 1px solid lighten($blue, 15%);
  color: lighten($blue, 15%);
}

/* !Footer End */

/*!Sticky Footer*/

* {
  margin: 0;
}

html, body {
    height: 100%;
}

.wrapper {
  min-height: 90%;
  /* equal to footer height */
  margin-bottom: -84px; 
}

.wrapper:after {
  content: "";
  display: block;
}

.main-footer, .wrapper:after {
  /* .push must be the same height as footer */
  height: 84px; 
}

/*Sticky Footer End*/

/* !Typography */

body {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
   font-weight: 300;
   color: #322f2f;
}

h1, h2, h3, h4, h5, h6{
  font-weight: 200;
  color: #4a4545;
}

ol, ul{
  padding-left: 34px;
}

body {
  font-size: 1.2em;
}

address {
  font-style: normal;   
}

aside {
  color: $white;
}

.entry-title {
  font-size: 1.8em;
}

.main-header h1 {
  font-size: 2em;
}

.main-header h2 {
  font-size: 1em;
}

.main-header h1, .main-header h2 {
  margin: 10px 0px 0px 16px;
}

.widget-title {
  font-size: 1.1em;
  color: $white;
}

/* !Typography End */

/* !Links */

article a, .nav-previous a, .nav-next a, p a {
  color: $blue;
}

a:hover, .nav-previous a:hover, .nav-next a:hover, p a:hover {
  border-bottom: 1px solid darken($blue, 10%);
  color: darken($blue, 15%);
}

h1 a:hover {
  border-bottom: none;
}

.site-title a, .site-description {
  color: $white;
}

.site-description {
  padding-bottom: 14px;
}

.site-title a:hover, main-footer a:hover {
  color: darken($white, 10%);
}

.category-sermons .entry-title a {
  background-color: #ffffff; 
  color: #4a4545;
  border-left: 8px solid #f39c12;
  padding: 0px 8px;
  @include h1-transition;
}

.category-sermons .entry-title a:hover {
  background-color: #f39c12; /* orange */
  color: $white;
  padding: 0px 8px;
}

.category-news .entry-title a {
  background-color: #ffffff;
  color: #4a4545;
  border-left: 8px solid #95a5a6;
  padding: 0px 8px;
  @include h1-transition;
}

.category-news .entry-title a:hover {
  background-color: #95a5a6; /* concrete */
  color: $white;
  padding: 0px 8px;
}

.category-events .entry-title a {
  background-color: #ffffff;
  color: #4a4545;
  border-left: 8px solid #16a085;
  padding: 0px 8px;
  @include h1-transition;
}

.category-events .entry-title a:hover {
  background-color: #16a085; /* green sea */
  color: $white;
  padding: 0px 8px;
}

.edit-link a {
  padding: 4px 4px; 
  margin-left: 10px;
  background-color: $green;
  color: $white;
}

.edit-link a:hover {
  background-color: darken($green, 10%); 
  border-bottom: none;
}

/* !Links End*/

.vcard {
  display: inline-block;
  margin: 0 ;
  border: none;
  padding: 0;
}

.vcard li {
    margin: 0;
    display: block; 
}

.vcard .fn {
    font-weight: normal;
    font-size: 1em;
}

/*!Navigation*/

.widget-area {
  float: right;
}

a.menu-link {
    position: absolute;
    right: 16px;
    top: 22px;
    background-color: #2980b9;/* belize */
    padding: 8px;
    color: #f9f9f9;
}

#menu {
    -webkit-transition: all 1.5s ease;  
  -moz-transition: all 1.5s ease;
  -ms-transition: all 1.5s ease;
  -o-transition: all 1.5s ease;
  transition: all 1.5s ease;
}

.hide {
  display: none;
}

.show {
  display: inline;
}

.nav ul {
  margin: 0px;
  padding: 0;
  list-style: none;
}

.nav li a {
  display: block;
  padding: 10px 0px 10px 20px;
  color: #ffffff;
}

.nav li a[href*="sermons"] { /* orange */
  background-color: #f39c12;
}
  
.nav li a[href*="about"] { /* peter river */
  background-color: #3498db;
}
  
.nav li a[href*="contact"] {/* alizarin */
  background-color: #f05d5d;
}
  
.nav li a[href*="news"] {/* concrete */
  background-color: #95a5a6;
}

.nav li a[href*="events"] {/* green sea */
  background-color: #16a085;
}

.nav-previous {
  float: left;
  padding: 0px 0px 16px 0px;
}

.nav-next {
  float: right;
}

#nav-below{
  margin-bottom: 40px;
}

/*Navigation End*/

/* !Article */

article {
  margin: 20px 0px 60px 0px;
}

img {
  border-radius: 2px;
  box-shadow: 0px 0px 4px lighten($charcoal, 15%);
}

.entry-meta {
  margin-bottom: 20px;
}

.post-single { /* removes white between header and footer */
  padding: 2px 0px 20px 0px;
}

/* Article End */

/*!About */
#map-canvas {
  height: 250px;
  width: 100%;
  border: 4px solid #e9e9e9;
  border-radius: 6px;
  /* -webkit-mask-image: -webkit-radial-gradient(circle, white 100%, black 100%); */
  box-shadow: 0px 0px 4px lighten($charcoal, 15%);
  margin: 0px auto;
}
            
#map-canvas img {
  max-width: none;
  box-shadow: none;
}

.about-address {
  text-align: center;
  margin: 12px;
    
}

/*!About End*/

/*!Contact*/

.contact img {
  margin-bottom: 10px;
}

.contact {
  margin-bottom: 30px;
}

/*Contact End*/

/* !Pages */

.page-template-contact-php {
  
}

.page-template-about-php {
  
}

/* Pages End */

/*!Form*/ 

input[type=search], input[type=text], input[type=email], input[type=submit], input[type=password] {
  -webkit-appearance: none;
}

input[type=text], input[type=email], input[type=password] {
  @include transition;
  @include form;
}

input[type=text]:focus, input[type=email]:focus, input[type=password]:focus {
  border: 1px solid $alizarin;
  box-shadow: 0 0 2px $alizarin;
}

.contact-form textarea {
  @include transition;
  @include form;
  width: 99% !important;
}

textarea:focus {
  border: 1px solid $alizarin;
  box-shadow: 0 0 2px $alizarin;
}

input[type=submit], #comment-submit {
  @include hover;
  color: #ffffff;
  border: none;
  background-color: $alizarin;
  outline: none;
  border-radius: 2px;
  padding: 6px 10px;
}

input[type=submit]:focus, input[type=submit]:hover {
  padding: 6px 20px;
}

.contact-form label {
  font-size: 1em !important;
  font-weight: 200 !important;
}
/* ... */

